bold and underline tags

--- a/index.html
+++ b/index.html
@@ -2,6 +2,6 @@
 <html>
  <body>
 	<h1> Cool Heading.</h1>
-   	<p>Better paragraph.</p>
+	 <p>Better <b>paragraph</b> then anyone <u>elses</u>.</p>
  </body>
 </html>
