--- a/index.html
+++ b/index.html
@@ -3,5 +3,6 @@
  <body>
 	<h1> Cool Heading.</h1>
 	 <p>Better <b>paragraph</b> then anyone <u>elses</u>.</p>
+	 <p><a href="https://www.goodhousekeeping.com/life/pets/g4531/cutest-dog-breeds/"> click here to see cute dogs</a></p>
  </body>
 </html>
