--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
- <body>
+ <body bgcolor="#50c0e6">
 	<h1> Cool Heading.</h1>
 	 <p>Better <b>paragraph</b> <font color = "blue">then anyone </font><u>elses</u>.</p>
 	 <p><a href="https://www.goodhousekeeping.com/life/pets/g4531/cutest-dog-breeds/"> click here to see cute dogs</a></p>
